<resources>
    <string name="app_name">My UFR Planning</string>
    <string name="menu_overview">Overview</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_settings">Settings</string>

    <!-- Titles of pages (used for toolbar) -->
    <string name="title_overview">My planning</string>
    <string name="title_settings">Settings</string>
    <string name="title_group_selection">Group selection</string>
    <string name="title_login">Account connection</string>

    <!-- Planning Widget -->
    <string name="app_widget_description">Thanks to this widget retrieve your planning on your home screen</string>
    <string name="planning_widget_update_worker_name" translatable="false">UpdateWidgetWorker</string>
    <string name="planning_widget_empty">Nothing to show!</string>

    <!-- Overview -->
    <string name="subtitle_overview_empty">Oops, there is nothing to show!\nPlease check your settings and retry later.</string>

    <!-- First config -->
    <string name="subtitle_group_selection">Please select your group in the list bellow</string>
    <string name="subtitle_first_config_done">The configuration is done!\nEnjoy the app!</string>
    <string name="subtitle_first_config_welcome">Thank you for using our new UFR planning app!\nLet\'s configure it!</string>

    <!-- Login -->
    <string name="subtitle_login">You can connect to your account to get more information on your planning, such as your professors name and your campus sports reservations\nLeave the fields blank not to connect</string>
    <string name="field_login_hint">Login</string>
    <string name="field_password_hint">Password</string>
    <string name="error_login_one_field_filled">Only one field is filled!</string>
    <string name="error_login_incorrect">Login or password incorrect!</string>

    <!-- Components -->
    <string name="btn_go_back">Go back</string>
    <string name="btn_done">Done</string>
    <string name="btn_get_started">Get started</string>
    <string name="btn_confirm">Confirm</string>

    <!-- General preferences -->
    <string name="general_preferences_header">General</string>
    <string name="general_preferences_planning_subcategory">Planning</string>
    <string name="preference_theme_key" translatable="false">theme</string>
    <string name="preference_theme_title">Theme</string>
    <string name="preference_theme_entry_light">Light</string>
    <string name="preference_theme_entry_dark">Dark</string>
    <string name="preference_theme_entry_system">Follow system</string>
    <string name="preference_theme_value_light" translatable="false">theme_light</string>
    <string name="preference_theme_value_dark" translatable="false">theme_dark</string>
    <string name="preference_theme_value_system" translatable="false">theme_system</string>

    <string name="preference_showing_period_key" translatable="false">showing_period</string>
    <string name="preference_showing_period_title">Showing period</string>
    <string name="preference_showing_period_entry_one_day">24 hours</string>
    <string name="preference_showing_period_entry_two_days">2 days</string>
    <string name="preference_showing_period_entry_three_days">3 days</string>
    <string name="preference_showing_period_entry_one_week">1 week</string>
    <string name="preference_showing_period_entry_two_weeks">2 weeks</string>
    <string name="preference_showing_period_entry_one_month">1 month</string>
    <string name="preference_showing_period_entry_two_months">2 months</string>
    <string name="preference_showing_period_value_one_day" translatable="false">1</string>
    <string name="preference_showing_period_value_two_days" translatable="false">2</string>
    <string name="preference_showing_period_value_three_days" translatable="false">3</string>
    <string name="preference_showing_period_value_one_week" translatable="false">7</string>
    <string name="preference_showing_period_value_two_weeks" translatable="false">14</string>
    <string name="preference_showing_period_value_one_month" translatable="false">31</string>
    <string name="preference_showing_period_value_two_months" translatable="false">62</string>

    <string name="preference_refresh_frequency_key" translatable="false">"refresh_frequency"</string>
    <string name="preference_refresh_frequency_title">"Refresh frequency"</string>
    <string name="preference_refresh_frequency_entry_manual">Manual</string>
    <string name="preference_refresh_frequency_entry_quarter_hour">15 min</string>
    <string name="preference_refresh_frequency_entry_half_hour">30 min</string>
    <string name="preference_refresh_frequency_entry_one_hour">1 hour</string>
    <string name="preference_refresh_frequency_entry_two_hours">2 hours</string>
    <string name="preference_refresh_frequency_entry_four_hours">4 hours</string>
    <string name="preference_refresh_frequency_entry_six_hours">6 hours</string>
    <string name="preference_refresh_frequency_value_manual" translatable="false">0</string>
    <string name="preference_refresh_frequency_value_quarter_hour" translatable="false">900000</string>
    <string name="preference_refresh_frequency_value_half_hour" translatable="false">1800000</string>
    <string name="preference_refresh_frequency_value_one_hour" translatable="false">3600000</string>
    <string name="preference_refresh_frequency_value_two_hours" translatable="false">7200000</string>
    <string name="preference_refresh_frequency_value_four_hours" translatable="false">14400000</string>
    <string name="preference_refresh_frequency_value_six_hours" translatable="false">21600000</string>

    <string name="preference_group_key" translatable="false">choose_group_preference</string>
    <string name="preference_group_title">Group</string>
    <string name="preference_group_summary">Choose your group here to get its planning</string>

    <string name="preference_login_key" translatable="false">login_preference</string>

    <string name="preference_campus_sports_key" translatable="false">show_campus_sports_reservations</string>
    <string name="preference_campus_sports_title">Campus sports reservations</string>
    <string name="preference_campus_sports_summary_off">You won\'t see your campus sports reservations on your planning</string>
    <string name="preference_campus_sports_summary_on">You will see your campus sports reservations on your planning (requires an account connection)</string>

    <!-- Alarm preferences -->
    <string name="alarm_preferences_header">Alarm</string>
    <string name="preference_enable_alarm_global_key" translatable="false">enable_alarm_global</string>
    <string name="preference_enable_alarm_8am_key" translatable="false">enable_alarm_8am</string>
    <string name="preference_time_alarm_8am_hour_key" translatable="false">time_alarm_8am_hour</string>
    <string name="preference_time_alarm_8am_minutes_key" translatable="false">time_alarm_8am_minutes</string>
    <string name="preference_enable_alarm_9h30am_key" translatable="false">enable_alarm_9h30am</string>
    <string name="preference_time_alarm_9h30am_hour_key" translatable="false">time_alarm_9h30am_hour</string>
    <string name="preference_time_alarm_9h30am_minutes_key" translatable="false">time_alarm_9h30am_minutes</string>
    <string name="preference_enable_alarm_11am_key" translatable="false">enable_alarm_11am</string>
    <string name="preference_time_alarm_11am_hour_key" translatable="false">time_alarm_11am_hour</string>
    <string name="preference_time_alarm_11am_minutes_key" translatable="false">time_alarm_11am_minutes</string>
    <string name="preference_enable_alarm_other_key" translatable="false">enable_alarm_other</string>
    <string name="preference_time_alarm_other_hour_key" translatable="false">time_alarm_other_hour</string>
    <string name="preference_time_alarm_other_minutes_key" translatable="false">time_alarm_other_minutes</string>
    <string name="preference_next_alarm_timestamp_key" translatable="false">next_alarm</string>
    <string name="preference_time_picker_tag" translatable="false">timePicker</string>
    <string name="preference_time_undefined">Undefined</string>
    <string name="preference_alarm_global_switch_title">Set wake-up alarms automatically</string>
    <string name="preference_alarm_8am_title">Alarm for first class tomorrow at 8 A.M.</string>
    <string name="preference_alarm_9h30am_title">Alarm for first class tomorrow at 9h30 A.M.</string>
    <string name="preference_alarm_11am_title">Alarm for first class tomorrow at 11 A.M.</string>
    <string name="preference_alarm_other_title">Alarm for first class tomorrow at another time</string>
    <string name="preference_alarm_first_class_tomorrow_key" translatable="false">time_first_class_tomorrow</string>

    <!-- Other preferences -->
    <string name="preference_local_planning_key" translatable="false">local_planning</string>
    <string name="preference_local_planning_last_modification_key" translatable="false">local_planning_last_modification</string>
    <string name="preference_group_id_key" translatable="false">group_id</string>
    <string name="preference_start_first_config_key" translatable="false">start_first_config</string>
    <string name="preference_user_id_key" translatable="false">user_id</string>
    <string name="preference_connection_token_key" translatable="false">user_connection_token</string>
    <string name="preference_user_display_name_key" translatable="false">user_display_name</string>
    <string name="preference_user_display_name_default_value">Anonymous connection</string>

    <!-- Notifications - Channels -->
    <string name="notifications_channel_permissions_name">Permissions</string>
    <string name="notifications_channel_permissions_description">Asks permissions for doing some tasks</string>
    <string name="notifications_channel_permissions_id" translatable="false">PERMISSIONS_NOTIFICATION_CHANNEL</string>
    <string name="notifications_channel_info_name">Information</string>
    <string name="notifications_channel_info_description">Show useful information</string>
    <string name="notifications_channel_info_id" translatable="false">INFO_NOTIFICATION_CHANNEL</string>

    <!-- Notifications - Display over other apps -->
    <string name="notifications_display_over_other_apps_title">Display over other apps</string>
    <string name="notifications_display_over_other_apps_text_short">Click here to enable</string>
    <string name="notifications_display_over_other_apps_text_long">Click here to enable. This will allow My UFR Planning setting up alarms automatically in background.</string>

    <!-- Notifications - Other time wake-up alarm -->
    <string name="notifications_other_time_alarm_title">Unusual wake-up alarm</string>
    <string name="notifications_other_time_alarm_text_short">Tomorrow, your first is %1$s. Your alarm is set for tomorrow at %2$s</string>
    <string name="notifications_other_time_alarm_text_long">Tomorrow, your first class is %1$s. Your alarm is set for tomorrow at %2$s If you want to change that, you can set it manually.</string>

    <!-- Notifications - First class tomorrow changed -->
    <string name="notifications_first_class_tomorrow_changed_title">First class tomorrow changed</string>
    <string name="notifications_first_class_tomorrow_changed_text_short">Tomorrow, your first class was %1$s and it is now %2$s.</string>
    <string name="notifications_first_class_tomorrow_changed_text_long">Tomorrow, your first class was %1$s and it is now %2$s. We invite you to check the alarm set, and modify it if necessary.</string>

    <!-- Miscellaneous -->
    <string name="planning_string_delimiter" translatable="false">#s#</string>
    <string name="set_alarm_worker_name" translatable="false">SetAlarmWorker</string>
</resources>