<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium"
    tools:context=".ui.firstconfig.FirstConfigWelcomeFragment">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:textAppearance="?attr/textAppearanceTitleLarge" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_first_config_done"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="@dimen/margin_medium"
        android:textAppearance="?attr/textAppearanceBodySmall" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/configuration_done"
        android:layout_gravity="center"
        tools:ignore="ContentDescription" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_first_config_go_back"
            android:text="@string/btn_go_back"
            android:layout_gravity="start"
            style="@style/Widget.Material3.Button.TextButton"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_first_config_done"
            android:text="@string/btn_done"
            android:layout_gravity="end"
            style="@style/Widget.Material3.Button"/>
    </LinearLayout>
</LinearLayout>